# n-body

./: .clang-format  .clang-format-include  .gitignore  README.md  meson.build
src/: body.c  body.h  draw.c  draw.h  kernel.cu  main.c  meson.build  quadtree.c  quadtree.cu  quadtree.h  utils.c  utils.h
